fixing spacing on sides issue + nav issues

--- a/main.css
+++ b/main.css
@@ -11,7 +11,10 @@
 html {
     font-size: 100%;
     scroll-behavior: smooth;
-    background-color: #000000;
+}
+
+body {
+    background-color: #000000 !important;
 }
 
 .button {
@@ -76,14 +79,24 @@ button i {
 /****************************************************************************************************************************/
 /* NAVBAR STARTS */
 /****************************************************************************************************************************/
+.navbar {
+    background-color: #000000 !important;
+}
+
 .navbar a {
     color: #ffffff;
 }
 
+.navbar-brand {
+    color: #07bb24 !important;
+}
+
 .navbar-toggler-icon{
-    color: #ffffff;
+    color: red !important;
     background-color: #07bb24;
 }
+
+
 /****************************************************************************************************************************/
 /* NAVBAR ENDS */
 /****************************************************************************************************************************/
@@ -99,7 +112,6 @@ button i {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #000000;
 }
 
 .hero-section-buttons-div {
@@ -123,7 +135,6 @@ button i {
 /* ABOUT SECTION START */
 /****************************************************************************************************************************/
 #about-section {
-    background-color: #000000;
     /* padding: 90px 80px 20px 80px; */
 }
 
@@ -140,7 +151,6 @@ button i {
 /* PROJECT SECTION START */
 /****************************************************************************************************************************/
 #projects-section {
-    background-color: #000000;
     /* padding: 90px 10px 20px 10px; */
 }
 
@@ -158,7 +168,6 @@ button i {
 /* CONTACT SECTION START */
 /****************************************************************************************************************************/
 #contact-section {
-    background-color: #000000;
     /* padding: 90px 80px 20px 80px; */
 }
 
@@ -179,7 +188,6 @@ button i {
 /* FOOTER SECTION STARTS */
 /****************************************************************************************************************************/
 #footer-section {
-    background-color: #000000;
     color: #07bb24;
     display: flex;
     justify-content: center;
